Your Course Home Page submission modification

--- a/styles/base.css
+++ b/styles/base.css
@@ -11,7 +11,7 @@
 :root {
   --primary-color: #0f110f;
   --secondary-color: #362417;
-  --accent1-color: #8f8d8c;
+  --accent1-color: #575554;
   --accent2-color: #fffbff;
 }
 
