--- a/styles/base.css
+++ b/styles/base.css
@@ -1,17 +1,29 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap");
-
-* {
-  margin: 0;
-  border: 0;
-  box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
-}
+/* import statement was moved to the normalize file so it can be read first */
 
 :root {
   --primary-color: #0f110f;
   --secondary-color: #362417;
-  --accent1-color: #575554;
+  --accent1-color: #605b59;
   --accent2-color: #fffbff;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--accent1-color);
+  color: var(--accent2-color);
+  padding-top: 10px;
+}
+
+header h1,
+.profile-picture {
+  text-align: center;
+}
+
+* {
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -19,31 +31,11 @@ body {
   margin: 0 auto;
 }
 
-hr {
-  border: 3px solid var(--accent1-color);
-  margin: 0 30px;
-}
-
-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  padding: 30px;
-  background-color: var(--accent1-color);
-  color: var(--accent2-color);
-}
-
-header h1 {
-  margin-top: auto;
-  margin-bottom: auto;
-  padding-left: 30px;
-}
 /* Nav bar styling */
 nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 30px;
   background-color: var(--primary-color);
 }
 
@@ -58,34 +50,31 @@ h2 {
   text-align: center;
 }
 
-/* card styling */
-
-.card {
-  display: grid;
-  grid-template-columns: 1fr;
-  border: 2px solid var(--accent1-color);
-  border-radius: 15px;
-  margin: 30px;
-}
-
-.card h3 {
-  text-align: center;
-  padding: 20px;
-  background-color: var(--accent1-color);
-  color: var(--accent2-color);
-}
-
-.activities {
-  margin: 20px;
-}
+/* .card p {
+  padding: 10px;
+} */
 
 /* footer */
-
 footer {
   display: flex;
   flex-direction: column;
   text-align: center;
   background-color: var(--accent1-color);
   color: var(--accent2-color);
-  padding: 60px;
+  padding: 40px;
+}
+
+@media screen and (max-width: 640px) {
+  ol {
+    list-style-type: none;
+  }
+
+  .card {
+    text-align: center;
+    padding: 20px;
+  }
+
+  .card h3 {
+    padding: 10px;
+  }
 }
