--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,7 +1,7 @@
 @media screen and (min-width: 640px) {
   hr {
-    border: 3px solid var(--accent1-color);
-    margin: 0 30px;
+    border: 1px solid var(--accent1-color);
+    grid-column: 1/3;
   }
 
   header {
@@ -15,26 +15,22 @@
     padding-left: 30px;
   }
 
+  h2 {
+    text-align: start;
+    padding-top: 10px;
+    padding-bottom: 2px;
+  }
+
+  main {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    column-gap: 10px;
+  }
+
   /* card styling */
   .card {
-    display: grid;
-    grid-template-columns: 1fr;
-    border: 2px solid var(--accent1-color);
-    border-radius: 15px;
-    margin: 30px;
     text-align: left;
-
-  }
-
-  ol {
-    padding: 10px 40px;
-  }
-
-  .card h3 {
-    text-align: center;
-    padding: 20px;
-    background-color: var(--accent1-color);
-    color: var(--accent2-color);
+    box-shadow: #362417 3px 3px 10px;
   }
 
   nav {
