--- a/styles/base.css
+++ b/styles/base.css
@@ -18,7 +18,6 @@ header {
 header h1,
 .profile-picture {
   text-align: center;
-  font-size: large;
 }
 
 * {
@@ -49,7 +48,6 @@ nav a {
 h2 {
   text-align: center;
   padding-top: 20px;
-  font-size: large;
 }
 
 main {
@@ -59,7 +57,6 @@ main {
 }
 
 .card h3 {
-  font-size: medium;
   text-align: center;
   padding: 10px;
   border-top-right-radius: inherit;
@@ -69,9 +66,9 @@ main {
 }
 
 .card {
-  border: 2px solid var(--accent1-color);
   border-radius: 10px;
   margin-top: 10px;
+  box-shadow: #362417 3px 3px 10px;
 }
 
 ol {
@@ -85,4 +82,15 @@ footer {
   background-color: var(--accent1-color);
   color: var(--accent2-color);
   padding: 40px;
+}
+
+@media screen and (max-width: 640px) {
+  h1,
+  h2 {
+    font-size: large;
+  }
+
+  h3 {
+    font-size: medium;
+  }
 }
