CSS Pseudo-Classes

--- a/styles/base.css
+++ b/styles/base.css
@@ -21,6 +21,11 @@ header {
   padding-top: 10px;
 }
 
+header img {
+  width: 100px;
+  aspect-ratio: 1/1;
+}
+
 header h1,
 .profile-picture {
   text-align: center;
