04 Assignment: Chamber Home Page Build

--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -24,9 +24,13 @@
     justify-content: center;
   }
 
-  .cards {
+  .sights img {
     /* display: block; */
     width: 40%;
     margin: 10px;
+  }
+
+  .advertisment {
+    margin-bottom: 15px;
   }
 }
