--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -108,6 +108,7 @@ header {
   aspect-ratio: 16/9;
   grid-column: 1/3;
   grid-row: 1/2;
+  object-fit: contain;
 }
 
 .introduction {
@@ -135,10 +136,13 @@ header {
 .sights {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  /* border: 1px solid black */
 }
 
 .sights img {
   display: block;
+  margin: 10px auto;
   width: 40%;
   height: auto;
   aspect-ratio: 1/1;
@@ -162,4 +166,11 @@ footer {
 
 footer p {
   padding: 2px;
+}
+
+@media screen and (max-width: 480px) {
+  h1, h3 {
+    font-size: .9rem;
+  }
+  
 }
