--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -25,4 +25,8 @@
     grid-column: 1/3;
     text-align: center;
   }
+
+  .advertisment, .current-event, .weather-card {
+    box-shadow: 1px 1px 10px;
+  }
 }
