05: Chamber of Commerce Home Page Continued

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -62,6 +62,7 @@ header {
 }
 
 .toggle-fill {
+  display: block;
   width: var(--width);
   height: var(--height);
   border-radius:var(--border-radius) ;
