--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -1,4 +1,3 @@
-
 * {
   padding: 0;
   margin: 0;
@@ -15,8 +14,8 @@
   --paragraph-font: Roboto;
 
   --width: 40px;
-  --height: calc((var(--width))/2);
-  --border-radius: calc((var(--height))/2);
+  --height: calc((var(--width)) / 2);
+  --border-radius: calc((var(--height)) / 2);
 }
 
 body {
@@ -31,7 +30,8 @@ a {
   font-family: var(--paragraph-font), sans-serif;
 }
 
-h3, h1 {
+h3,
+h1 {
   font-family: var(--heading-font), sans-serif;
   padding: 10px;
   text-align: center;
@@ -65,7 +65,7 @@ header {
   display: block;
   width: var(--width);
   height: var(--height);
-  border-radius:var(--border-radius) ;
+  border-radius: var(--border-radius);
   background: #fff;
   transition: background 0.2s;
 }
@@ -183,7 +183,6 @@ header {
   grid-column: 1/3;
   grid-row: 1/2;
   color: var(--accent2-color);
-  /* font-size: small; */
 }
 
 .introduction p {
@@ -204,17 +203,12 @@ header {
 .sights {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  /* border: 1px solid black */
 }
 
 .sights img {
-  display: block;
   margin: 10px auto;
-  width: 40%;
+  width: 50%;
   height: auto;
-  aspect-ratio: 1/1;
-  border: 1px solid black;
 }
 
 .current-event,
@@ -236,9 +230,14 @@ footer p {
   padding: 2px;
 }
 
+.icons img {
+  width: 50px;
+  padding: 5px;
+}
+
 @media screen and (max-width: 480px) {
-  h1, h3 {
-    font-size: .9rem;
+  h1,
+  h3 {
+    font-size: 0.9rem;
   }
-  
 }
