--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -175,13 +175,17 @@ header {
   text-align: center;
 }
 
-.hero img {
+.hero picture {
   width: 100%;
   height: auto;
   /* aspect-ratio: 16/9; */
   grid-column: 1/3;
   grid-row: 1/2;
   object-fit: contain;
+}
+
+.hero picture img {
+  width: 100%;
 }
 
 .introduction {
