--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -244,6 +244,44 @@ footer p {
   padding: 5px;
 }
 
+/* DIscover page */
+.images-discover {
+  text-align: center;
+  padding: 10px;
+}
+
+.images-discover img {
+  width: 90%;
+  height: 200px;
+  padding: 10px;
+}
+
+aside {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  gap: 20px;
+  background-color: var(--accent1-color);
+  margin-bottom: 20px;
+}
+
+.aside-dark div {
+  background-color: var(--primary-color);
+}
+
+aside p {
+  padding: 20px;
+  line-height: 1.3rem;
+}   
+
+.info-card, .stats, .events {
+  width: 90%;
+  margin: 0 auto;
+  box-shadow: 1px 1px 10px;
+  background-color: var(--accent2-color);
+}
+
 @media screen and (max-width: 480px) {
   h1,
   h3 {
