--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -27,11 +27,50 @@
   .sights img {
     /* display: block; */
     width: 30%;
-  /* aspect-ratio: 1/1; */
+    /* aspect-ratio: 1/1; */
     margin: 10px;
   }
 
   .advertisment {
     padding-bottom: 30px;
   }
+
+  /* Dicover Page */
+
+  
+  @media screen and (min-width: 800px) {
+  .main-discover {
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+    grid-template-rows: 1fr;
+    text-align: center;
+    justify-content: center;
+    padding: 10px;
+  }
+  aside {
+    box-shadow: 1px 1px 10px ;
+    padding: 10px;
+  }
+
+  .images-discover {
+    margin-top: 1.5rem;
+  }
+
+  .images-discover img {
+    width: 95%;
+    height: 200px;
+  }
+
+  .stats,
+  .info-card,
+  .events {
+    width: 100%;
+    /* height: auto; */
+  }
+
+  .weather-card {
+    height: 120px;
+  }
+}
+ 
 }
