--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -56,10 +56,10 @@
     margin-top: 1.5rem;
   }
 
-  .images-discover img {
+  /* .images-discover img {
     width: 95%;
     height: 200px;
-  }
+  } */
 
   .stats,
   .info-card,
