--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -257,6 +257,7 @@ footer p {
   height: auto;
   padding: 10px;
   transition: transform 0.3s ease;
+  padding: 20px;
 }
 
 .images-discover img:hover {
