--- a/styles/form.css
+++ b/styles/form.css
@@ -1,5 +1,5 @@
 :root {
-    --width: 500px;
+    --width: 300px;
     --height:200px;
     --background-color: beige;
 }
@@ -38,4 +38,11 @@ input:focus {
 
 label {
     padding-bottom: .1rem;
+}
+
+@media screen and (max-width: 500px) {
+    .form {
+        width: 90%;
+        min-width: 200px;
+    }
 }
