--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -307,6 +307,47 @@ aside p {
   box-shadow: 1px 1px 10px black;
 }
 
+/* join us */
+
+form {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  margin: 1.5rem auto;
+}
+
+caption {
+  text-align: center;
+}
+
+input, textarea, select {
+  padding: .6rem;
+  margin-bottom: .8rem;
+}
+
+.about-us {
+  width: auto;
+  margin: 1.5rem auto;
+  padding: 10px;
+  text-align: center;
+}
+
+.about-us p {
+  line-height: 1.6rem;
+}
+
+input:focus {
+  background-color: aliceblue;
+}
+
+.benefits {
+  text-align: center;
+  line-height: 1.4rem;
+  padding: 10px;
+  box-shadow: 1px 1px 10px;
+  margin: 10px;
+}
+
 
 @media screen and (max-width: 480px) {
   h1,
