--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -176,7 +176,7 @@ header {
   text-align: center;
 }
 
-.hero picture {
+.hero img {
   width: 100%;
   height: auto;
   /* aspect-ratio: 16/9; */
@@ -185,14 +185,18 @@ header {
   object-fit: contain;
 }
 
-.hero picture img {
+/* .hero picture img {
+  width: 100%;
+} */
+
+.hero img {
   width: 100%;
 }
 
 .introduction {
   grid-column: 1/3;
   grid-row: 1/2;
-  color: var(--accent1-color);
+  color: var(--accent2-color);
 }
 
 .introduction p {
