--- a/final-project/styles/base.css
+++ b/final-project/styles/base.css
@@ -8,24 +8,29 @@
   --main-color: #fbebb5;
 }
 
+body {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
 header {
   position: relative;
   display: flex;
-  /* background-color: var(--main-color); */
-}
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+  /* border: 1px solid black; */
 
-header h3 {
-  padding-top: 1.1rem;
-  padding-left: 1rem;
+  /* background-color: var(--main-color); */
 }
 
 /* Hambuger Menu */
 
 .hambuger {
   display: block;
-  position: absolute;
+  /* position: absolute;
   top: 1rem;
-  right: 1rem;
+  right: 1rem; */
   cursor: pointer;
 }
 
@@ -51,6 +56,7 @@ header h3 {
 }
 
 .nav-bar {
+  display: flex;
   padding: 10rem 0;
   position: fixed;
   right: -100%;
@@ -80,6 +86,7 @@ header h3 {
 
 .contain-hero {
   height: 100vh;
+  /* border: 1px solid black; */
   display: flex;
   flex-direction: column;
   background-color: var(--main-color);
@@ -105,11 +112,26 @@ header h3 {
   width: 100%;
 }
 
+.welcome-img {
+  margin-top: 7rem;
+  /* border: 1px solid black; */
+}
+
+.hero {
+  display: flex;
+  flex-direction: column;
+  /* border: 1px solid black; */
+}
+
 /* second section  Home Page */
 
 .display-1 {
   display: flex;
   flex-direction: column;
+}
+
+.display-1 p, h3 {
+  font-size: medium;
 }
 
 .table img,
