--- a/final-project/styles/base.css
+++ b/final-project/styles/base.css
@@ -85,7 +85,7 @@ header {
 }
 
 .contain-hero {
-  height: 100vh;
+  height: 800px;
   /* border: 1px solid black; */
   display: flex;
   flex-direction: column;
