--- a/final-project/styles/base.css
+++ b/final-project/styles/base.css
@@ -209,6 +209,22 @@ h3 {
   /* border: 1px solid black; */
 }
 
+/* Table Section */
+table {
+  width: 100%;
+  padding: 1rem;
+}
+
+th,
+td {
+  padding: 1rem;
+  /* border: 1px solid black; */
+}
+
+tr:nth-of-type(2n) {
+  background-color: #835d5d3b;
+}
+
 
 footer {
   color: white;
@@ -224,3 +240,21 @@ footer a {
   text-decoration: none;
   color: white;
 }
+
+@media screen and (max-width: 650px) {
+  td {
+    display: block;
+  }
+
+  th {
+    display: none;
+  }
+
+  td::before {
+    content: attr(data-cell) ": ";
+    font-weight: 700;
+    text-transform: capitalize;
+  }
+}
+
+
