--- a/final-project/styles/base.css
+++ b/final-project/styles/base.css
@@ -185,6 +185,7 @@ h3 {
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   gap: 2rem;
   margin: 0;
+  text-align: center;
 }
 
 .rentals img {
@@ -197,7 +198,7 @@ h3 {
 }
 
 .showcase img {
-  width: 90%;
+  width: 70%;
 }
 
 .rental-hero img {
