--- a/final-project/styles/medium.css
+++ b/final-project/styles/medium.css
@@ -18,21 +18,38 @@
   }
 
   .nav-bar li a {
-    padding: 1rem;
-    transition: 0.5s;
+    padding: 10px 1rem;    
+    text-decoration: none;
+    position: relative;
   }
 
-  .nav-bar li a:hover {
+  .nav-bar li a::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 2px;
+    transition: width 0.3s ease;
     background-color: black;
-    color: white;
+    text-align: center;
+
   }
+
+  .nav-bar li a:hover::after {
+    width: 100%;
+  }
+
+  .nav-bar li a:active::after {
+    width: 100%;
+  }
+
 
 
   header {
     justify-content: space-around;
     align-items: center;
     padding: 1rem;
-    /* border: 1px solid black; */
   }
 
   .hero {
