--- a/final-project/styles/base.css
+++ b/final-project/styles/base.css
@@ -1,20 +1,22 @@
-@import url('https://fonts.googleapis.com/css?family=Imprima:700|Imprima:400');
+@import url("https://fonts.googleapis.com/css?family=Imprima:700|Imprima:400");
 
 body {
-  font-family: 'Imprima';
+  font-family: "Imprima";
   font-weight: 400;
 }
 
-h1, h2, h3, h4, h5 {
-  font-family: 'Imprima';
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Imprima";
   font-weight: 700;
 }
 
-html {font-size: 100%;} /* 16px */
-
-
-
-
+html {
+  font-size: 100%;
+} /* 16px */
 
 * {
   margin: 0;
@@ -246,6 +248,86 @@ tr:nth-of-type(2n) {
   background-color: #835d5d3b;
 }
 
+.prices {
+  margin-top: 1.5rem;
+}
+
+/*  */
+
+/* Footer section */
+
+/* Reservation Page */
+
+.herodiv {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 20vh;
+
+  background: linear-gradient(
+    217deg,
+    #e9bb23,
+    #e3e2e2
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.reservations-main {
+  padding: 1rem;
+}
+
+.reservations-main p {
+  padding: 7px;
+}
+
+.reservations-main h3 {
+  text-align: center;
+  padding: 0.8rem 0;
+}
+
+.agreement {
+  padding: 0 2em;
+  padding-bottom: 1rem;
+}
+
+.agreement li {
+  padding: 0.5rem;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  /* border: 1px solid black; */
+}
+
+.reservations-main input,
+.reservations-main select,
+.reservations-main textarea {
+  width: 90%;
+  margin: 0 auto;
+}
+
+label {
+  padding: 0.5rem;
+  margin-left: 1rem;
+}
+.reservations-main input,
+.reservations-main select {
+  padding: 0.3rem;
+}
+.reservations-main input:focus,
+.reservations-main textarea:focus,
+.reservations-main select:focus {
+  background-color: #fff9e5;
+}
+
+.drive-in img {
+  width: 80%;
+  animation: slideInFromRight 1s ease-in forwards;
+}
+
+/* .drive-in {
+  display: none;
+} */
 
 footer {
   color: white;
@@ -276,8 +358,4 @@ footer a {
     font-weight: 700;
     text-transform: capitalize;
   }
-
-
 }
-
-
