--- a/final-project/styles/medium.css
+++ b/final-project/styles/medium.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 642px) {
   h1 {
-    font-size: 3rem; 
+    font-size: 3rem;
   }
 
   h2 {
@@ -134,6 +134,9 @@
     flex-direction: row;
     justify-content: space-around;
   }
+
+  /* Reservation Page */
+
 
   @keyframes slideInFromLeft {
     0% {
