--- a/final-project/styles/base.css
+++ b/final-project/styles/base.css
@@ -77,12 +77,11 @@ header {
   position: fixed;
   right: -100%;
   top: 0;
-  flex-direction: column;
+  flex-direction: column; 
   width: 60vw;
   height: 100vh;
   transition: 0.3s;
   border: 1px solid black;
-  padding: auto;
   background-color: rgba(219, 212, 212, 0.73);
   z-index: 2;
 }
@@ -389,6 +388,83 @@ label {
   text-align: center;
 }
 
+/* Contact Us page */
+
+.contact-hero {
+  display: grid;
+}
+
+.contact-hero img  {
+  width: 100%;
+  grid-row: 1/2;
+  grid-column: 1/2;
+}
+
+.contact-hero h1 {
+  grid-row: 1/2;
+  grid-column: 1/2;
+  z-index: 2;
+  justify-self: center;
+  align-self: center;
+  color: white;
+}
+
+.contact-main {
+  padding: 1rem;
+}
+
+.contact-main ul {
+  padding: 1rem;
+}
+
+.contact-form form {
+  display: flex;
+  flex-direction: column;
+  background-color: #fff9e5;
+}
+
+.contact-form  input, .contact-form textarea {
+  width: 90%;
+  margin: 0 auto;
+  border-radius: .5rem;
+  padding: 1rem;
+}
+
+#submit {
+  width: 200px;
+  margin: 1rem auto;
+}
+
+.social-media {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.social-media li {
+  list-style: none;
+}
+
+.social-media img {
+  width: 70%;
+  cursor: pointer;
+}
+
+footer {
+  color: white;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  background-color: #000;
+}
+
+footer a {
+  padding: 10px;
+  text-decoration: none;
+  color: white;
+}
+
 @keyframes slideInFromRight {
   0% {
     transform: translateX(-100%);
@@ -415,22 +491,6 @@ label {
   100% {
     transform: translateX(-100%);
   }
-}
-
-
-footer {
-  color: white;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  padding: 1rem;
-  background-color: #000;
-}
-
-footer a {
-  padding: 10px;
-  text-decoration: none;
-  color: white;
 }
 
 @media screen and (max-width: 650px) {
