--- a/final-project/styles/medium.css
+++ b/final-project/styles/medium.css
@@ -135,6 +135,32 @@
     justify-content: space-around;
   }
 
+
+  /* Contact Us Page */
+
+  .contact-form form {
+    margin: 1rem auto;
+    padding: 3rem;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    border-radius: 1rem;
+  
+  } 
+  
+  .contact-form form input, textarea {
+    padding: .8rem;
+    border-radius: .5rem; 
+  }
+  
+  .contact-form textarea {
+    margin-bottom: 1rem;
+  }
+  
+  .contact-form submit {
+    width: 1rem;
+  }
+
   /* Reservation Page */
 
   @keyframes slideInFromLeft {
