--- a/final-project/styles/base.css
+++ b/final-project/styles/base.css
@@ -302,11 +302,12 @@ tr:nth-of-type(2n) {
   align-items: center;
   height: 20vh;
 
-  background: linear-gradient(
+  background-color: var(--main-color);
+  /* background: linear-gradient(
     217deg,
     #facd3b,
     #f0e9e9
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  ); W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .reservations-main {
@@ -449,6 +450,22 @@ label {
 .social-media img {
   width: 70%;
   cursor: pointer;
+}
+
+/* I FRAME */
+
+.iframe {
+  /* width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" */
+  /* height: 450px; */
+  width: 100%;
+  text-align: center;
+  margin-top: 20px;
+  padding: 1rem;
+}
+
+iframe {
+  height: 400px;
+  width: 100%;
 }
 
 footer {
