--- a/final-project/styles/base.css
+++ b/final-project/styles/base.css
@@ -446,8 +446,9 @@ label {
 /* I FRAME */
 
 .iframe {
-  /* width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" */
-  /* height: 450px; */
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
   width: 100%;
   text-align: center;
   margin-top: 20px;
@@ -455,6 +456,8 @@ label {
 }
 
 iframe {
+
+
   height: 400px;
   width: 100%;
 }
