--- a/final-project/styles/medium.css
+++ b/final-project/styles/medium.css
@@ -135,30 +135,24 @@
     justify-content: space-around;
   }
 
-
   /* Contact Us Page */
 
-  .contact-form form {
-    margin: 1rem auto;
-    padding: 3rem;
-    width: 70%;
+  .contact-message {
+    text-align: center;
+    width: 644px;
+    margin: 0 auto;
+  }
+
+  .contactus-form {
+    width: 80%;
+    margin: 0 auto;
+  }
+
+  .address {
     display: flex;
-    flex-direction: column;
-    border-radius: 1rem;
-  
-  } 
-  
-  .contact-form form input, textarea {
-    padding: .8rem;
-    border-radius: .5rem; 
-  }
-  
-  .contact-form textarea {
-    margin-bottom: 1rem;
-  }
-  
-  .contact-form submit {
-    width: 1rem;
+    height: fit-content;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 
   /* Reservation Page */
