--- a/final-project/styles/base.css
+++ b/final-project/styles/base.css
@@ -414,6 +414,9 @@ tr:nth-of-type(2n) {
   border-radius: 15px 0px 0px 0px;
   border: 1px 0px 0px 0px;
   margin: 0 auto;
+  background-color: #000;
+  color: #fff;
+  margin-top: 1rem;
 }
 
 .address {
