--- a/final-project/styles/base.css
+++ b/final-project/styles/base.css
@@ -171,8 +171,13 @@ h3 {
 }
 
 .blog-1 img {
+  padding: .5rem 1rem;
   width: 100%;
-  padding: 1rem;
+}
+
+.blog p {
+  width: 100%;
+  padding: .5rem 1rem;
 }
 
 .blog-1 a {
@@ -467,18 +472,51 @@ iframe {
 /* Footer section */
 
 footer {
-  color: white;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  padding: 1rem;
   background-color: #000;
 }
 
-footer a {
-  padding: 10px;
-  text-decoration: none;
+.project {
   color: white;
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 400px;
+}
+
+.links {
+  display: flex;
+  flex-direction: row;
+}
+
+.links a {
+  color: white;
+  padding: .5rem;
+}
+
+.social-media {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.footer img {
+  width: 50px;
+  padding: 10px;
+}
+
+hr {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.copyright {
+  color: white;
+  text-align: center;
+  padding: 2rem;
 }
 
 @keyframes slideInFromRight {
