--- a/final-project/styles/medium.css
+++ b/final-project/styles/medium.css
@@ -41,7 +41,7 @@
   }
 
   .nav-bar li a {
-    padding: 10px 1rem;
+    padding: 10px 10px;
     text-decoration: none;
     position: relative;
   }
