--- a/final-project/styles/base.css
+++ b/final-project/styles/base.css
@@ -3,7 +3,7 @@
 body p, body ul, body a{
   font-family: "Imprima";
   font-weight: 400;
-  font-size: 1.2rem;
+  /* font-size: 1.2rem; */
 }
 
 h1,
